dev.log
▲ Next.js 16.2.9 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.66:3000
- Environments: .env.local, .env
✓ Ready in 496ms

 GET / 200 in 809ms (next.js: 117ms, proxy.ts: 234ms, application-code: 459ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
 GET /api/profile 200 in 1772ms (next.js: 214ms, application-code: 1558ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
 GET /api/profile 200 in 216ms (next.js: 6ms, application-code: 210ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."credits" FROM "public"."profiles" WHERE ("public"."profiles"."id" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."credit_ledger"."id", "public"."credit_ledger"."profileId", "public"."credit_ledger"."amount", "public"."credit_ledger"."reason", "public"."credit_ledger"."jobId", "public"."credit_ledger"."createdAt" FROM "public"."credit_ledger" WHERE "public"."credit_ledger"."profileId" = $1 ORDER BY "public"."credit_ledger"."createdAt" DESC LIMIT $2 OFFSET $3
 GET /api/credits 200 in 447ms (next.js: 69ms, application-code: 379ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."credits" FROM "public"."profiles" WHERE ("public"."profiles"."id" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."credit_ledger"."id", "public"."credit_ledger"."profileId", "public"."credit_ledger"."amount", "public"."credit_ledger"."reason", "public"."credit_ledger"."jobId", "public"."credit_ledger"."createdAt" FROM "public"."credit_ledger" WHERE "public"."credit_ledger"."profileId" = $1 ORDER BY "public"."credit_ledger"."createdAt" DESC LIMIT $2 OFFSET $3
 GET /api/credits 200 in 230ms (next.js: 5ms, application-code: 225ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."books"."id", "public"."books"."title", "public"."books"."genre", "public"."books"."targetAudience", "public"."books"."status", "public"."books"."coverImageUrl", "public"."books"."totalCreditsEstimated", "public"."books"."totalCreditsCharged", "public"."books"."createdAt", COALESCE("aggr_selection_0_Chapter"."_aggr_count_chapters", 0) AS "_aggr_count_chapters" FROM "public"."books" LEFT JOIN (SELECT "public"."chapters"."bookId", COUNT(*) AS "_aggr_count_chapters" FROM "public"."chapters" WHERE 1=1 GROUP BY "public"."chapters"."bookId") AS "aggr_selection_0_Chapter" ON ("public"."books"."id" = "aggr_selection_0_Chapter"."bookId") WHERE "public"."books"."ownerId" = $1 ORDER BY "public"."books"."createdAt" DESC OFFSET $2
 GET /api/books 200 in 1108ms (next.js: 118ms, application-code: 990ms)
prisma:query SELECT "public"."profiles"."id", "public"."profiles"."email", "public"."profiles"."name", "public"."profiles"."credits", "public"."profiles"."tier", "public"."profiles"."isAdmin", "public"."profiles"."createdAt", "public"."profiles"."updatedAt" FROM "public"."profiles" WHERE ("public"."profiles"."email" = $1 AND 1=1) LIMIT $2 OFFSET $3
prisma:query SELECT "public"."books"."id", "public"."books"."title", "public"."books"."genre", "public"."books"."targetAudience", "public"."books"."status", "public"."books"."coverImageUrl", "public"."books"."totalCreditsEstimated", "public"."books"."totalCreditsCharged", "public"."books"."createdAt", COALESCE("aggr_selection_0_Chapter"."_aggr_count_chapters", 0) AS "_aggr_count_chapters" FROM "public"."books" LEFT JOIN (SELECT "public"."chapters"."bookId", COUNT(*) AS "_aggr_count_chapters" FROM "public"."chapters" WHERE 1=1 GROUP BY "public"."chapters"."bookId") AS "aggr_selection_0_Chapter" ON ("public"."books"."id" = "aggr_selection_0_Chapter"."bookId") WHERE "public"."books"."ownerId" = $1 ORDER BY "public"."books"."createdAt" DESC OFFSET $2
 GET /api/books 200 in 280ms (next.js: 5ms, application-code: 275ms)
⨯ Error [ChunkLoadError]: Failed to load chunk server/chunks/[root-of-the-server]__2061fbp._.js from runtime for chunk server/app/api/training/style-profile/route.js
    at Object.<anonymous> (.next/dev/server/app/api/training/style-profile/route.js:6:3) {
  page: '/api/training/style-profile',
  [cause]: SyntaxError: Invalid regular expression: /```(?\:json)?\s*([\s\S]*?)```/: Invalid group
      at <unknown> (.next/dev/server/chunks/[root-of-the-server]__2061fbp._.js:291)
      at Object.<anonymous> (.next/dev/server/app/api/training/style-profile/route.js:6:3)
}
 GET /api/training/style-profile 500 in 458ms (next.js: 333ms, application-code: 125ms)
⨯ Error [ChunkLoadError]: Failed to load chunk server/chunks/[root-of-the-server]__2061fbp._.js from runtime for chunk server/app/api/training/style-profile/route.js
    at Object.<anonymous> (.next/dev/server/app/api/training/style-profile/route.js:6:3) {
  page: '/api/training/style-profile',
  [cause]: SyntaxError: Invalid regular expression: /```(?\:json)?\s*([\s\S]*?)```/: Invalid group
      at <unknown> (.next/dev/server/chunks/[root-of-the-server]__2061fbp._.js:291)
      at Object.<anonymous> (.next/dev/server/app/api/training/style-profile/route.js:6:3)
}
[browser] [API Client] /training/style-profile failed: Unexpected token '<', "<!DOCTYPE "... is not valid JSON 
    at apiFetch (src/lib/api.ts:30:13)
    at async listStyleProfiles (src/lib/api.ts:221:18)
  28 |   } catch (error) {
  29 |     const message = error instanceof Error ? error.message : 'Network error';
> 30 |     console.error(`[API Client] ${path} failed:`, message);
     |             ^
  31 |     return { success: false, error: message };
  32 |   }
  33 | } (src/lib/api.ts:30:13)
 GET /api/training/style-profile 500 in 143ms (next.js: 105ms, application-code: 38ms)
[browser] [API Client] /training/style-profile failed: Unexpected token '<', "<!DOCTYPE "... is not valid JSON 
    at apiFetch (src/lib/api.ts:30:13)
    at async listStyleProfiles (src/lib/api.ts:221:18)
  28 |   } catch (error) {
  29 |     const message = error instanceof Error ? error.message : 'Network error';
> 30 |     console.error(`[API Client] ${path} failed:`, message);
     |             ^
  31 |     return { success: false, error: message };
  32 |   }
  33 | } (src/lib/api.ts:30:13)
✓ Compiled in 974ms
✓ Compiled in 244ms
